# Kartheek

./: README.md
Desktop/BTH/: 1.docx  2014_04_msw_a4_format (1) (1).doc  2014_04_msw_a4_format-2.doc  3103255877.doc  703.22 Assignment 1.doc  ASPM 2 .docx  Aligning Organizations Through Measurement.epub  An introduction to the Swedish language.pptx  Assignment 2.docx  Assignment 3.docx  Assignment 4.docx  Atc seminar.doc.docx  Chapter10.ppt  Data collection and tracking.docx  Datacollection.doc  Estimates excelsheet.xls  Estimates.xls  Final_SLR_(1).docx  HRM RESEARCH.doc  KARTHEEK SOA65101.docx  My Library.rdf.xml  Presentation1.pptx  Project Development Methodology.docx  Project Management Teamplate-2.doc  ProjectManagementPlan (1).docx  RP.docx  SM.docx  SM1.docx  SOFTWARE METRICS intro 2.docx  SOFTWARE METRICS.docx  Seminar+1_Scientific+Information+retrieval-2.pptx  Softwaremetrics Assignment.docx  Val till PAAXAHT14 till  VT2015 (2).doc  aspm1.doc  ass1.txt  atc2015.doc  atc2015.docx  atc2015.rtf  bok%3A978-3-319-05047-8.epub  chilla changed version 2.0-2-2-2.docx  (+24 more)
Desktop/BTH/ASPM/: 11TH REPORT.docx  LOG BOOK(2).xlsx  PRESENTATION .docx  ROLES.docx  SENIORS PRESENTATION REVIEW.docx  Status Report11-01-2016(2).docx  Status Report11-01-2016(3).docx  Status Report11-01-2016.docx  test cases.mht
Desktop/BTH/ASPM/Articles/: PLANNING.docx  Project Management Plan.docx  product featurs .txt
Desktop/BTH/ASPM/Aspm-foodservice-master/: README.md
Desktop/BTH/ASPM/CHARLA/: Status report.docx
Desktop/BTH/ASPM/LOG BOOK /: LOG BOOK(2).xlsx  LOG BOOK(3).xlsx  LOG BOOK.xlsx  Logbook_sprint3.xlsx  hours.xlt  hours.xlt.xlsx  hourschanged.xlt(3).xlsx  hourschanged.xlt.xlsx
Desktop/BTH/ASPM/MAGAPU/: PMP.docx  Status report akshay.docx
Desktop/BTH/ASPM/Madala/: Anvitha project status 1.txt
Desktop/BTH/ASPM/PAANCHEJENYAH/: First status report.docx
Desktop/BTH/ASPM/PMP/: AppliedSPM.docx  PMP OVERVIEw.docx  Project Management Plan.docx  Quality plan1.docx  Risk Management.docx  procesmodel.docx
Desktop/BTH/ASPM/Status report folder/: Book1.xlt  DEC 14TH STATUS REPORT.docx  STATUS REPORT DEC 7TH.docx  STATUS REPORT_30.docx  Status Report 23.docx  Status Report for 16th.docx  Status Report.docx  Status Report_21_12.docx  Status Report_4jan(2).docx  Status Report_4jan.docx  status_report_14.docx
Desktop/BTH/ASPM/YARLAGADDA/: status report.txt
Desktop/BTH/ASPM/food/: connection.php  foodservice (3).sql  one.php
Desktop/BTH/ASPM/harini/: aspmh.docx  h.docx
Desktop/BTH/ASPM/samhith/: sam.txt
Desktop/BTH/ASPM/wbs/: LOG BOOK.xlsx
Desktop/BTH/a1 and debate report/: Final SLR (2).docx  Final SLR.docx  Finalreport.pdf.doc  jitu slr.docx
Desktop/BTH/a2/: Doc-2.docx  HR.docx  HRM RESEARCH (1).doc  Project+template+static+analysis.xlsx  Student Questionnaire Feb 2015 Sweden.docx  assign.txt  proposal key.txt
Desktop/BTH/general/: DATA COLLECTION METHODS_2.ppt  Lecture 6 Qualitative Data Analysis.ppt  qualitative.ppt
Desktop/BTH/project/: IEEE_Paper_Word_Template_A4_V3.doc  New Microsoft Office Excel Worksheet.xlsx  Project+template+static+analysis (1).xlsx  ~$New Microsoft Office Excel Worksheet.xlsx
Desktop/BTH/project/sudokuki-1.2.2-binary/: HOWTO_RUN_SUDOKUKI.txt  sudokuki.sh
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  sudokuki.sh
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/debian/: changelog  control  copyright  menu.ex  release_Debian_package_HOWTO  rules
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ar.po  de.po  el.po  en.po  eo.po  es.po  fr.po  hu.po  ja.po  lv.po  nl.po  pt.po  pt_BR.po  ru.po  sudokuki.pot  ta.po  tr.po  zh.po
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/src/: Makefile.am  Makefile.in
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/src/classes/: DIST_NOINST_JAVA.include  Makefile.am  Makefile.in
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/src/classes/net/jankenpoi/sudokuki/: Version.java
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/src/classes/net/jankenpoi/sudokuki/model/: GridModel.java
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/src/classes/net/jankenpoi/sudokuki/solver/: BruteForceGridSolver.java  DLXGridSolver.java
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/src/classes/net/jankenpoi/sudokuki/ui/swing/: AboutDialog.java  LanguageDialog.java  LanguageMenu.java  ResolveGridDialog.java  StockIcons.java
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/src/resources/: EXTRA_DIST.include  Makefile.am  Makefile.in
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/src/resources/files/net/jankenpoi/i18n/: sudokuki_ar.properties  sudokuki_de.properties  sudokuki_el.properties  sudokuki_en.properties  sudokuki_eo.properties  sudokuki_es.properties  sudokuki_fr.properties  sudokuki_hu.properties  sudokuki_ja.properties  sudokuki_lv.properties  sudokuki_nl.properties  sudokuki_pt.properties  sudokuki_pt_BR.properties  sudokuki_ru.properties  sudokuki_ta.properties  sudokuki_tr.properties  sudokuki_zh.properties
Desktop/BTH/project/sudokuki-1.2.2-binary/sudokuki-1.2.2/src/resources/files/net/jankenpoi/sudokuki/resources/text/: COPYING.html
Desktop/BTH/thesis/: 5300_1_Spring05.ppt  Qualitativedataslides.ppt  Research Proposal.docx  TestSummit03_AgileTesting.ppt  agile important points .pages  agile7.html  eplc_risk_management_template.doc  eplc_training_plan_template.doc  jkproposal.docx  project-plan for master thesis 2016 (Autosaved).docx  project-plan for master thesis 2016 .docx  project-plan for master thesis 2016.docx  risks pp.doc  simon thesis 2016.docx  ~$mon thesis 2016.docx
Desktop/BTH/thesis/research methods/: Aciton+Reserach.pptx  Analysis_of_quaitative_data.ppt  INTERVIEW METHOD IN RESEARCH.pptx  Lecture2_Research_&_Methodology_Chap2.ppt  Qualitative Data Analysis.ppt  day13.ppt  (+5 more)
Desktop/BTH/v&V/: L07+-+Test+Processes+and+Automation.ppt
(+15 files in other folders)
